--- a/package.json
+++ b/package.json
@@ -5,21 +5,21 @@
   "private": true,
   "scripts": {
     "server": "node server/index.js",
-    "build": "tsc && webpack",
-    "start": "tsc && webpack && node server/index.js",
+    "build": "tsc && npm run pack",
+    "pack": "webpack",
+    "start": "npm run pack && npm run server",
+    "start-ts": "npm run build && npm run server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Derek Spiner",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2",
-    "fs": "^0.0.1-security",
-    "uuid": "^8.3.2",
-    "webpack-node-externals": "^3.0.0"
+    "express": "^4.17.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.4",
     "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-node-externals": "^3.0.0"
   }
 }
