--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Derek Spiner",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.13",
     "express": "^4.17.2"
   },
   "devDependencies": {
