--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server": "node server/index.js",
     "build": "tsc && npm run pack",
-    "pack": "webpack",
+    "pack": "node server/build.js",
     "start": "npm run pack && npm run server",
     "start-ts": "npm run build && npm run server",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,12 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.13",
-    "express": "^4.17.2"
+    "cors": "^2.8.5",
+    "express": "^4.17.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/node": "^17.0.4",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-node-externals": "^3.0.0"
+    "@types/node": "^17.0.4"
   }
 }
